--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
-p {
-  color: red;
+
+body {
+    font-family: Lato,sans-serif;
+}
+
+.address-block {
+    display: block;
+    float: right;
+}
+
+hr {
+    clear: both;
+}
+
+h1 {
+    margin-top: auto;
+}
+.sub-content {
+    float: right;
+    width: 75%;
+}
+
+.position-title {
+    float: left;
+    width: 25%;
+}
+
+.position-title p {
+    font-style: italic;
 }
