--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@ body {
     font-family: 'Lato',sans-serif;
 }
 
+.container {
+    width: 900px;
+    margin: auto;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    padding: 50px;
+}
+
+#firstSection {
+    height: 150p
+}
+
 .address-block {
     float: right;
     text-align: right;
@@ -13,16 +25,28 @@ hr {
     clear: both;
     border-color: #777;
     border-width:thin;
-    margin-left: -15px;
 }
 
 h1 {
     margin-top: auto;
-    font
 }
+
 .sub-content {
     float: right;
     width: 70%;
+}
+
+.row {
+    width: 100%;
+}
+
+.row:before, .row:after {
+    display: table;
+    content: " ";
+}
+
+.row:after {
+    clear: right;
 }
 
 .section-item {
@@ -31,7 +55,9 @@ h1 {
 }
 
 .institution-title h3 {
+    font-size: 1.5em;
     font-weight: 700;
+    margin-bottom: -10px;
 }
 
 .section-item h3 {
@@ -50,14 +76,13 @@ h1 {
     display: block;
     float: left;
     margin-top: 25px;
-}
-
-
-
-#firstSection {
-    margin-top: 60px;
+    margin-bottom: -15px;
 }
 
 .section-title h2 {
     font-weight: 900;
+    font-size: 2em;
+}
+#profile {
+    font-style: italic;
 }
