--- a/style.css
+++ b/style.css
@@ -86,3 +86,62 @@ h1 {
 #profile {
     font-style: italic;
 }
+
+.social {
+    border-color: #bbb;
+    background-color: transparent;
+    border-style: solid;
+    border-width: 2px;
+    display: inline-block;
+    -o-transition:.2s;
+    -ms-transition:.2s;
+    -moz-transition:.2s;
+    -webkit-transition:.2s;
+    transition:0.2s;
+    font-size: 200%;
+    width: 45px;
+    height: 45px;
+    padding-top: 8px;
+    border-radius: 20%;
+    z-index: 0;
+    margin: 2px;
+}
+
+@media (min-width: 900px) {
+  .social:hover {
+    transform: scale(1.25);
+    z-index: 1;
+  }
+}
+
+.social:hover {
+  border-color: black;
+  z-index: 1;
+}
+
+#fcc-icon {
+  color: darkgreen;
+}
+
+#fcc-icon:hover {
+  color: white;
+  background-color: darkgreen;
+}
+
+#github-icon {
+  color: black;
+}
+
+#github-icon:hover {
+  color: white;
+  background-color: black;
+}
+
+#linkedin-icon {
+  color: #0077B5;
+}
+
+#linkedin-icon:hover {
+  color: white;
+  background-color: #0077B5;
+}
