--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     margin: auto;
     background-color: whitesmoke;
     border-radius: 10px;
-    padding: 50px;
+    padding: 50px 50px 0 50px;
 }
 
 #firstSection {
